--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="intro-text">
             <h1>Divya Lodha</h1>
-            <p>Full Stack Web Developer specializing in Javascript, based in Dubai</p>
+            <p>Full Stack Web Developer, based in Dubai</p>
         </div>
       </div>
     </div>
@@ -85,8 +85,8 @@
       <div class="col-xs-12 col-md-6"> <img src="img/about.jpg" class="img-responsive" alt=""> </div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
-          <p>Hello :) I am Divya Lodha. My goal in life is to always love what I am doing. I am currently completing my Fullstack javascript cooding bootcamp in Dubai and immersing myself in all that this city has to offer.I did my bachelors in Computer Science from <strong>MIT COE,Pune</strong>.I am highly motivated,result oriented,self-driven,hard-working and fast-learner.Also well organized with an ability to prioritize tasks and capability to work,develop and grow.Experienced in communicating with the team and clients.</p>
-          <p>Attentive and accurate to details.Excited to use front-end and back-end developer skills and help deliver visually appealing sites with user friendly design.</p>
+          <p>Hello :) I am Divya Lodha. My goal in life is to always love what I am doing. I am currently completing my Fullstack javascript cooding bootcamp in Dubai and immersing myself in all that this city has to offer. I did my bachelors in Computer Science from <strong>MIT COE,Pune</strong>. I am highly motivated,result oriented,self-driven,hard-working and fast-learner. Also well organized with an ability to prioritize tasks and capability to work,develop and grow. Experienced in communicating with the team and clients.</p>
+          <p>Attentive and accurate to details. Excited to use front-end and back-end developer skills and help deliver visually appealing sites with user friendly design.</p>
         </div>
     </div>
   </div>
@@ -125,15 +125,23 @@
 <div id="portfolio">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>Experience and Trainigs</h2>
+      <h2>Experience and Training</h2>
       <hr>
           <div class="row">
               <div class="col-xs-12 col-md-6"><img src="img/Accenture-Logo.jpg" class="img-responsive" alt="Accenture"></div>
               <div class="col-xs-12 col-md-6">
               <div class="about-text">
               <h4>Associate Application Developer   (Nov 2016-Dec 2017)</h4>
-              <p>I started my career as Application Development Associate with Accenture in Nov 2016 .I was working under the direction of senior members on Vodacom C3D project which implemented the business integrations. Utilizing my academic and professional knowledge, I dedicated one year with Accenture working in the automation and web application development team . Here I gained an opportunity to identify process to automate and automated major flows using Selenium, Python and Java which eventually reduced manual work and time for order completion thus improving productivity. I also worked with the web application development team and thus gained knowledge about Django web-framework.My experience in Accenture taught me team spirit and timely delivery of work assigned. I would like to further strengthen my technical acumen with my sincerity towards my work.</p>
-              <p>Attended accenture's entry level two months intensive basic and advance java training in Pune,India. The training focused on advance-java topics such as Sprig MVC,Servlet,Ajax. Had hands-on on the same topics by developing a web-application project.</p>
+              <p> 
+                <ul style="list-style: square">
+                  <li>I started my career as Application Development Associate with Accenture in Nov 2016. I was working under the direction of senior members on Vodacom C3D project which implemented the business integrations.</li>
+                  <li>Utilizing my academic and professional knowledge, I dedicated one year with Accenture working in the automation and web application development team.</li>
+                  <li>Here I gained an opportunity to identify process to automate and automated major flows using <strong>Selenium</strong>, <strong>Python</strong> and <strong>Java</strong> which eventually reduced manual work and time for order completion thus improving productivity.</li>
+                  <li>I also worked with the web application development team and thus gained knowledge about <strong>Django web-framework</strong>.</li>
+                  <li>My experience in Accenture taught me team spirit and timely delivery of work assigned. I would like to further strengthen my technical acumen with my sincerity towards my work.</li>
+                </ul>
+              </p>
+              <p>Attended <strong>Accenture's entry level two months intensive basic and advance java training</strong> in Pune,India. The training focused on advance-java topics such as <strong>Spring MVC, Servlet, Ajax</strong>. Had hands-on on the same topics by developing a web-application project.</p>
               </div>
               </div>
            </div>
@@ -143,8 +151,8 @@
               <div class="col-xs-12 col-md-6"><img src="img/astrolabs-logo.jpg" class="img-responsive" alt="Astrolabs"></div>
               <div class="col-xs-12 col-md-6">
               <div class="about-text">
-              <h4>Astrolabs Full stack javascript coding bootcamp</h4>
-              <p>Attended astrolab's two months full stack javascript coding bootcamp in JLT,Dubai.The program focused on modern technologies used by full stack developers that included: Domains, Hosting, Basics of WordPress, HTML, CSS, JavaScript (basic algorithms), Node JS , MongoDB, Mongoose, Webpack, Git, React JS and even the basics of React Native (to build hybrid mobile apps)!</p>
+              <h4>ASTROLABS Full stack Javascript coding bootcamp</h4>
+              <p>Attending astrolab's two months full stack javascript coding bootcamp in JLT,Dubai.The program focused on modern technologies used by full stack developers that included: Domains, Hosting, Basics of WordPress, HTML, CSS, JavaScript (basic algorithms), Node JS , MongoDB, Mongoose, Webpack, Git, React JS and even the basics of React Native (to build hybrid mobile apps)!</p>
               </div>
               </div>
            </div>
