--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="row">
             <div class="intro-text">
               <h1>Divya Lodha</h1>
-              <p>Full Stack Web Developer, specializing in ReactJs, based in Dubai</p>
+              <p>Full Stack Web Developer, based in Dubai</p>
             </div>
           </div>
         </div>
