--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="col-xs-12 col-md-6">
           <div class="about-text">
             <p>Hello :) I am Divya Lodha. My goal in life is to always love what I am doing. I recently completed my Fullstack
-              javascript cooding bootcamp in Dubai and immersing myself in all that this city has to offer. I did my bachelors
+              Javascript Coding Bootcamp and immersing myself in all that this new city has to offer. I did my bachelors
               of Enginnering in Information Technology from
               <strong>MIT COE,Pune (Pune University)</strong>. I am highly motivated, result oriented, self-driven, hard-working
               and fast-learner. Also well organized with an ability to prioritize tasks and capability to work, develop and
@@ -131,13 +131,13 @@
         </div>
         <div class="col-md-3 col-sm-6 skill">
           <span class="chart" data-percent="80">
-            <span class="percent">85</span>
+            <span class="percent">70</span>
           </span>
           <h4>CSS3</h4>
         </div>
         <div class="col-md-3 col-sm-6 skill">
           <span class="chart" data-percent="80">
-            <span class="percent">70</span>
+            <span class="percent">80</span>
           </span>
           <h4>Javascript</h4>
         </div>
@@ -149,13 +149,13 @@
         </div>
         <div class="col-md-3 col-sm-6 skill">
           <span class="chart" data-percent="70">
-            <span class="percent">70</span>
+            <span class="percent">60</span>
           </span>
           <h4>ReactJs</h4>
         </div>
         <div class="col-md-3 col-sm-6 skill">
           <span class="chart" data-percent="70">
-            <span class="percent">70</span>
+            <span class="percent">60</span>
           </span>
           <h4>WordPress</h4>
         </div>
@@ -190,20 +190,23 @@
               <p>
                 <ul style="list-style: square">
                   <li>I started my career as Application Development Associate with Accenture in Nov 2016. I was working under
-                    the direction of senior members on Vodacom C3D project which implemented the business integrations.</li>
-                  <li>Utilizing my academic and professional knowledge, I dedicated one year with Accenture working in the automation
-                    and web application development team.</li>
-                  <li>Here I gained an opportunity to identify process to automate and automated major flows using
+                    the direction of senior members on Vodacom C3D project which implemented the business integrations of
+                    Vodafone South Africa.</li>
+                  <li>Utilizing my academic and professional knowledge, I dedicated one year with Accenture working in the Automation
+                    and Web Application Development team.</li>
+                  <li>Here I gained an opportunity to understand how bundle of orders are accepted from Siebel CRM and then orchestrated
+                    between end systems such as OSM and BRM using FMW. After understanding the order orchestration the task
+                    was to identify process which can be automated for order completion and then automating the same using
                     <strong>Selenium</strong> and
                     <strong>Java</strong> which eventually reduced manual work and time for order completion thus improving productivity.</li>
-                  <li>I also worked with the web application development team and thus gained knowledge about
-                    <strong>Django web-framework</strong>.</li>
+                  <li>I also worked with the Web Application Development team and thus gained knowledge about
+                    <strong>Spring MVC.</strong>.</li>
                   <li>My experience in Accenture taught me team spirit and timely delivery of work assigned. I would like to
                     further strengthen my technical acumen with my sincerity towards my work.</li>
                 </ul>
               </p>
               <p>Attended
-                <strong>Accenture's entry level two months intensive basic and advance java training</strong> in Pune,India. The
+                <strong>Accenture's entry level two months intensive basic and advance Java training</strong> in Pune,India. The
                 training focused on advance-java topics such as
                 <strong>Spring MVC, Servlet, Ajax</strong>. Had hands-on on the same topics by developing a web-application project.</p>
             </div>
@@ -217,11 +220,10 @@
           </div>
           <div class="col-xs-12 col-md-6">
             <div class="about-text">
-              <h4>ASTROLABS Full stack Javascript coding bootcamp (June 2018-Aug 2018)</h4>
+              <h4>ASTROLABS Full Stack Javascript Coding Bootcamp (June 2018-Aug 2018)</h4>
               <p>Completed astrolab's two months full stack javascript coding bootcamp in JLT, Dubai.The program focused on
                 modern technologies used by full stack developers that included: Domains, Hosting,
-                <strong>Basics of WordPress, HTML, CSS, JavaScript, Node JS, MongoDB, Mongoose, Webpack, Git, React JS and even the
-                  basics of React Native</strong>(to build hybrid mobile apps)!</p>
+                <strong>Basics of WordPress, HTML, CSS, JavaScript, Node JS, MongoDB, Mongoose, Webpack, Git and React JS </strong>></p>
             </div>
           </div>
         </div>
