--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
             <li>
               <a class="page-scroll" href="#portfolio">Experience</a>
             </li>
-            <!--<li> <a class="page-scroll" href="#testimonials">Testimonials</a> </li> Commented By Divya-->
+            <li>
+              <a class="page-scroll" href="#myWork">My Work</a>
+            </li>
             <li>
               <a class="page-scroll" href="#contact">Contact</a>
             </li>
@@ -174,6 +176,7 @@
       </div>
     </div>
   </div>
+
   <!-- Portfolio Section -->
   <div id="portfolio">
     <div class="container">
@@ -224,6 +227,60 @@
               <p>Completed astrolab's two months full stack javascript coding bootcamp in JLT, Dubai.The program focused on
                 modern technologies used by full stack developers that included: Domains, Hosting,
                 <strong>Basics of WordPress, HTML, CSS, JavaScript, Node JS, MongoDB, Mongoose, Webpack, Git and React JS </strong>></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!--My Work section-->
+  <div id="myWork">
+    <div class="container">
+      <div class="section-title text-center center">
+        <h2>My Work</h2>
+        <hr>
+      </div>
+
+      <div class="row">
+        <div class="portfolio-items center text-center">
+          <div class="col-sm-6 col-md-3 col-lg-4">
+            <div class="portfolio-item">
+              <div class="hover-bg">
+                <a href="https://divlodha.github.io/Wanderlust/" target="_blank">
+                  <div class="hover-text">
+                    <h4>Wanderlust</h4>
+                    <small>Web Design using Materialize CSS</small>
+                  </div>
+                  <img src="img/Wanderlust.jpg" class="img-responsive" alt="Project Title">
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-md-3 col-lg-4">
+            <div class="portfolio-item">
+              <div class="hover-bg">
+                <a href="https://divlodha.github.io/Wanderlust/" target="_blank">
+                  <div class="hover-text">
+                    <h4>Freelancer's Community</h4>
+                    <small>Web application using react.js for front end and node.js for backend.</small>
+                  </div>
+                  <img src="img/Freelancer.jpg" class="img-responsive" alt="Project Title"> </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-4">
+            <div class="portfolio-item">
+              <div class="hover-bg">
+                <a href="https://green-monitor-app.herokuapp.com/" target="_blank">
+                  <div class="hover-text">
+                    <h4>Green Monitor</h4>
+                    <small>Web app to reduce your carbon footprint.</small>
+                  </div>
+                  <img src="img/GreenMonitor.jpg" class="img-responsive" alt="Project Title"> </a>
+              </div>
             </div>
           </div>
         </div>
