--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           <div class="col-sm-6 col-md-3 col-lg-4">
             <div class="portfolio-item">
               <div class="hover-bg">
-                <a href="https://divlodha.github.io/Wanderlust/" target="_blank">
+                <a href="https://freelancer-community.herokuapp.com/" target="_blank">
                   <div class="hover-text">
                     <h4>Freelancer's Community</h4>
                     <small>Web application using react.js for front end and node.js for backend.</small>
