--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-6">
-          <img src="img/about.jpg" class="img-responsive" alt=""> </div>
+          <img src="img/profile.jpg" class="img-responsive" alt=""> </div>
         <div class="col-xs-12 col-md-6">
           <div class="about-text">
             <p>Hello :) I am Divya Lodha. My goal in life is to always love what I am doing. I recently completed my Fullstack
@@ -188,7 +188,7 @@
             <img src="img/Accenture-Logo.jpg" class="img-responsive" alt="Accenture">
           </div>
           <div class="col-xs-12 col-md-6">
-            <div class="about-text">
+            <div class="about-text m-auto">
               <h4>Associate Application Developer (Nov 2016-Dec 2017)</h4>
               <p>
                 <ul style="list-style: square">
@@ -222,7 +222,7 @@
             <img src="img/astrolabs-logo.jpg" class="img-responsive" alt="Astrolabs">
           </div>
           <div class="col-xs-12 col-md-6">
-            <div class="about-text">
+            <div class="about-text m-auto">
               <h4>ASTROLABS Full Stack Javascript Coding Bootcamp (June 2018-Aug 2018)</h4>
               <p>Completed astrolab's two months full stack javascript coding bootcamp in JLT, Dubai.The program focused on
                 modern technologies used by full stack developers that included: Domains, Hosting,
