--- a/index.html
+++ b/index.html
@@ -185,10 +185,11 @@
         <hr>
         <div class="row">
           <div class="col-xs-12 col-md-6">
+            <br/>
             <img src="img/Accenture-Logo.jpg" class="img-responsive" alt="Accenture">
           </div>
-          <div class="col-xs-12 col-md-6">
-            <div class="about-text m-auto">
+          <div class="col-xs-12 col-md-6 m-auto">
+            <div class="about-text">
               <h4>Associate Application Developer (Nov 2016-Dec 2017)</h4>
               <p>
                 <ul style="list-style: square">
@@ -218,15 +219,16 @@
         </br>
         </br>
         <div class="row">
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 m-auto">
             <img src="img/astrolabs-logo.jpg" class="img-responsive" alt="Astrolabs">
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 m-auto">
             <div class="about-text m-auto">
               <h4>ASTROLABS Full Stack Javascript Coding Bootcamp (June 2018-Aug 2018)</h4>
               <p>Completed astrolab's two months full stack javascript coding bootcamp in JLT, Dubai.The program focused on
                 modern technologies used by full stack developers that included: Domains, Hosting,
-                <strong>Basics of WordPress, HTML, CSS, JavaScript, Node JS, MongoDB, Mongoose, Webpack, Git and React JS </strong>></p>
+                <strong>Basics of WordPress, HTML, CSS, JavaScript, Node JS, MongoDB, Mongoose, Webpack, Git and React JS </strong>
+              </p>
             </div>
           </div>
         </div>
