--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
         </br>
         </br>
         <div class="row">
-          <div class="col-xs-12 col-md-6 m-auto">
+          <div class="col-xs-12 col-md-6">
+            <br/>
             <img src="img/astrolabs-logo.jpg" class="img-responsive" alt="Astrolabs">
           </div>
           <div class="col-xs-12 col-md-6 m-auto">
