--- a/index.html
+++ b/index.html
@@ -277,52 +277,52 @@
           <div class="col-sm-6 col-md-3 col-lg-4">
             <div class="portfolio-item">
               <div class="hover-bg">
-                <a href="https://green-monitor-app.herokuapp.com/" target="_blank">
+                <a href="https://swardashan.in/" target="_blank">
                   <div class="hover-text">
-                    <h4>Green Monitor</h4>
-                    <small>Web app to reduce your carbon footprint.</small>
+                    <h4>Swardashan Ecommerce Website</h4>
+                    <small>Ecommerce website using storefront theme elementor editor and woocommerce plugin.</small>
                   </div>
-                  <img src="img/GreenMonitor.jpg" class="img-responsive" alt="Project Title"> </a>
+                  <img src="img/swardashan.jpg" class="img-responsive" alt="Project Title"> </a>
               </div>
             </div>
           </div>
         </div>
+
       </div>
     </div>
-  </div>
 
 
-  <!-- Contact Section -->
-  <div id="contact" class="text-center">
-    <div class="overlay">
-      <div class="container">
-        <div class="section-title center">
-          <h2>Get In Touch</h2>
-          <hr>
-        </div>
+    <!-- Contact Section -->
+    <div id="contact" class="text-center">
+      <div class="overlay">
+        <div class="container">
+          <div class="section-title center">
+            <h2>Get In Touch</h2>
+            <hr>
+          </div>
 
-        <div class="social">
-          <ul>
-            <li>
-              <a href="https://github.com/DivLodha/" target="_blank">
-                <i class="fa fa-github"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/divya-lodha-0882aab4" target="_blank">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </li>
-            <li>
-              <a href="mailto:dhoka.div17@gmail.com">
-                <i class="fa fa-envelope" target="_blank"></i>
-              </a>
-            </li>
-          </ul>
+          <div class="social">
+            <ul>
+              <li>
+                <a href="https://github.com/DivLodha/" target="_blank">
+                  <i class="fa fa-github"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/divya-lodha-0882aab4" target="_blank">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </li>
+              <li>
+                <a href="mailto:dhoka.div17@gmail.com">
+                  <i class="fa fa-envelope" target="_blank"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
   </div>
   <div id="footer">
     <div class="container text-center">
